# pytc2

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: ACKMOSS bicuad.net  ComparativaOrdenes.ipynb  GIC bicuad.net  Makefile  SOS_pasabajo.ipynb  SOS_pasabajo_simple.raw  SOS_pasabanda_simple.plt  Sallen-Key sensibilidad.ipynb  analisis_mai.ipynb  conf.py  conversion_cuadripolos.ipynb  cuadripolos_elementales-Copy1.ipynb  cuadripolos_elementales.ipynb  ejnb_ComparativaOrdenes.ipynb  ejnb_GIC_Antoniou.ipynb  ejnb_adaptadores_restr_transferencia.ipynb  ejnb_analisis_mna.ipynb  ejnb_atenuadores.ipynb  ejnb_conversion_cuadripolos.ipynb  ejnb_cuadripolos_elementales.ipynb  ejnb_filtro_pasivo_sos.ipynb  ejnb_funciones_excitacion.ipynb  ejnb_funciones_excitacion_RLC.ipynb  ejnb_funciones_excitacion_disipativas.ipynb  ejnb_funciones_transf_descargadas.ipynb  ejnb_funciones_transf_doblemente_cargadas.ipynb  ejnb_funciones_transf_simplemente_cargadas.ipynb  ejnb_parametrizacion_pasabanda.ipynb  ejnb_transformacion_pasabanda.ipynb  example.ipynb  filtro_pasivo_sos.ipynb  filtros_FIR.ipynb  filtros_IIR.ipynb  funciones_excitacion.ipynb  funciones_excitacion_RLC.ipynb  funciones_excitacion_disipativas.ipynb  funciones_transf_R_constante.ipynb  funciones_transf_descargadas.ipynb  funciones_transf_doblemente_cargadas.ipynb  funciones_transf_simplemente_cargadas.ipynb  (+12 more)
examples/: SOS_pasabajo_simple.py
tests/: test_cuadripolos.py  (+7 more)
(+83 files in other folders)
