[tool.poetry]
name = "pytc2"
version = "0.0.1"
description = "A circuit theory module for students at Universidad Tecnológica Nacional Regional Buen"
authors = ["Mariano Llamedo Soria"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sympy = "^1.11.1"
schemdraw = "^0.15"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
spyder = "^5.4.2"
pyfda = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
